Implementacao do database no flask com SQLAlchemy

--- a/flask/.vscode/settings.json
+++ b/flask/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "P:\\Estudos\\.virtualEnv\\Py3.8.2-DjgoFlaskPtsg\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Estudos\\Python\\.virtualEnv\\vEnvPy3.8.2Flask\\Scripts\\python.exe",
+    "python.linting.pylintArgs": ["--load-plugins", "pylint-flask"]
 }
