Correção do BlackList

--- a/flask/.vscode/settings.json
+++ b/flask/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "P:\\Estudos\\.virtualEnv\\Py382-Flask\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Estudos\\Python\\.virtualEnv\\vEnvPy3.8.2Flask\\Scripts\\python.exe",
     "python.linting.pylintArgs": [
         "--load-plugins",
         "pylint-flask"
